--- a/_GitBook/index.Rmd
+++ b/_GitBook/index.Rmd
@@ -1,10 +1,10 @@
 --- 
 title: "Intro R Workshop: Data Manipulation, Analysis, and Visualisation"
-subtitle: "UWC BCB Honours 2018"
+subtitle: "UWC BCB Honours 2019"
 author: "Robert W Schlegel & AJ Smit"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-github-repo: "robwschlegel/Intro_R_Workshop"
+github-repo: "ajsmit/Intro_R_Workshop"
 cover-image: "figures/769_life_finds_a_way.png"
 documentclass: book
 bibliography: [book.bib]
