--- a/_GitBook/05-graphics.Rmd
+++ b/_GitBook/05-graphics.Rmd
@@ -140,6 +140,17 @@ ggplot(data = ChickWeight, aes(x = Time, y = weight, colour = Diet)) +
 
 Notice that when we place the legend at the bottom of the figure ggplot automatically makes it horizontal for us. Why do we use 'colour' inside of `labs()` to change the legend title?
 
+# Exercise:
+
+With all of this information in hand, please take another five minutes to either improve one of the plots generated or create a beautiful graph of your own. Here are some ideas:
+
+- See if you can change the thickness of the points/lines.
+- Change the shape, colour, fill and size of each of the points.
+- Can you find a way to change the name of the legend? What about its labels?
+- Explore the different geom functions available. These include geom_boxplot, geom_density, etc.
+- Try using a different color palette
+- Use different themes
+
 ## Session info
 ```{r, echo=TRUE, include=TRUE}
 installed.packages()[names(sessionInfo()$otherPkgs), "Version"]
