--- a/_GitBook/index.Rmd
+++ b/_GitBook/index.Rmd
@@ -1,8 +1,10 @@
 --- 
 title: 'Intro R Workshop: Data Manipulation, Analysis, and Visualisation'
-author: "Robert W Schlegel , AJ Smit & Amieroh Abrahams"
+author: "Robert W Schlegel, AJ Smit & Amieroh Abrahams"
 date: "`r Sys.Date()`"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 bibliography: book.bib
 description: The basics for a safe voyage through the tidyverse.
 documentclass: book
@@ -10,7 +12,7 @@ github-repo: ajsmit/Intro_R_Workshop
 link-citations: yes
 cover-image: figures/769_life_finds_a_way.png
 site: bookdown::bookdown_site
-subtitle: UWC BCB Honours 2019
+subtitle: UWC BCB Honours 2020
 biblio-style: apalike
 ---
 
