--- a/_GitBook/index.Rmd
+++ b/_GitBook/index.Rmd
@@ -1,6 +1,7 @@
 --- 
 title: 'Intro R Workshop: Data Manipulation, Analysis, and Visualisation'
 author: "Robert W Schlegel, AJ Smit & Amieroh Abrahams"
+description: The basics for a safe voyage through the tidyverse.
 date: "`r Sys.Date()`"
 output:
   pdf_document: 
@@ -10,13 +11,13 @@ output:
     number_sections: yes
     toc: yes
   html_document: 
-    number_sections: true
+    df_print: default
+    keep_md: yes
+    number_sections: yes
     pdf_print: paged
-    self_contained: false
     theme: cerulean
-    keep_md: true
+    toc: yes
 bibliography: book.bib
-description: The basics for a safe voyage through the tidyverse.
 documentclass: book
 github-repo: ajsmit/Intro_R_Official
 link-citations: yes
@@ -33,5 +34,5 @@ knitr::include_graphics("figures/769_life_finds_a_way.png")
 ```
 
 This online book contains all of the content to be covered in this Intro R Workshop.  
-The associated files may be downloaded at: https://github.com/robwschlegel/Intro_R_Workshop  
+The associated files may be downloaded at: https://github.com/ajsmit/Intro_R_Official  
 Please use the table of contents (TOC) on the left to navigate the course content as desired.
