--- a/_GitBook/02-RStudio.Rmd
+++ b/_GitBook/02-RStudio.Rmd
@@ -146,7 +146,7 @@ To type the assignment operator (`<-`) push the following two keys together: **a
 
 Spaces are also optional around assignment operators. It is good practice to use single spaces in your R scripts, and the **alt -** shortcut will do this for you automagically. Spaces are not only there to make the code more readable to the human eye, but also to the machine. Try this:
 
-```{r}
+```{r, eval = FALSE}
 d<-2
 d < -2
 ```
@@ -155,18 +155,20 @@ Note that the first line of code assigns `d` a value of `2`, whereas the second 
 
 Another important question here is, is R case sensitive? Is `A` the same as `a`? Figure out a way to check for yourself.
 
-## Exercise:
+## Exercise
 
 What are the values after each statement in the following?
 
+```{r, eval = FALSE}
 mass <- 48 
 mass <- mass * 2.0 # mass? 
 age <- age - 17 # age? m
-ass_index <- mass/age # mass_index?
+mass_index <- mass / age # mass_index?
+```
 
 Use R to calculate some simple mathematical expressions entered.
 
-Assign the value of 40 to x Assign the value of 23 to y. Make z the value of x-y Display z in the console
+Assign the value of 40 to `x` and Assign the value of 23 to `y`. Make `z` the value of `x-y` Display `z` in the console
 
 We can create a vector in R by using the combine `c()` function:
 
